deployment/udagram-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: udagram-frontend
  name: udagram-frontend
spec:
  ports:
  - name: "8100"
    port: 8100
    targetPort: 80
  selector:
    io.kompose.service: udagram-frontend
status:
  loadBalancer: {}
