deployment/udagram-service-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: udagram-service-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/udagram-service-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/udagram-service-network: "true"
